[metadata]
name = papercast_github_pages
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Github Pages Podcast Publisher for Papercast
url = https://github.com/papercast-dev/papercast-github-pages-podcast

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.publishers =
    GithubPagesPodcastPublisher = papercast_github_pages_podcast:GithubPagesPodcastPublisher
